Fix mobile text alignment: Switch form justify to left to remove extra spaces

--- a/src/components/ServicesSection.css
+++ b/src/components/ServicesSection.css
@@ -83,4 +83,8 @@
         grid-template-columns: 1fr;
         padding: 0 1rem;
     }
+
+    .service-description {
+        text-align: left;
+    }
 }
